force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/DCRM_Lead_Conversion_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>DCRM Lead Conversion Mapping</label>
    <pluralLabel>DCRM Lead Conversion Mappings</pluralLabel>
</CustomObject>