force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Only active mapping will be applied.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>