force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Lead_Field__c.field-meta.xml
<CustomField>
    <fullName>Lead_Field__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The field API on Lead object to map from.</description>
    <label>Lead Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>