force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Lead_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Types__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>The record type API of the lead. This enables different lead-process-specific mapping to be applied.</description>
    <label>Lead Record Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>