force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Mapping_Type__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The Type of mapping Field or Record Type etc</description>
    <label>Mapping Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
                <default>true</default>
                <label>Field</label>
            </value>
            <value>
                <fullName>Record Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>