force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>The target field API to map to (eg. AccountId)</description>
    <label>Target Field</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>