force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>The target object API to map to (eg. Opportunity)</description>
    <label>Target Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>