force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>The Target Default Value of the Target Field</description>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>