force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/validationRules/DCRM_TargetValue_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>DCRM_TargetValue_Check</fullName>
    <active>true</active>
    <description>CC-1099: Target Value cannot be leave blank if Lead Field is blank</description>
    <errorConditionFormula>AND(ISBLANK(Lead_Field__c),ISBLANK(Target_Value__c))</errorConditionFormula>
    <errorDisplayField>Target_Value__c</errorDisplayField>
    <errorMessage>Populate either Target Value or Lead Field.</errorMessage>
</ValidationRule>