force-app/main/default/objects/DCRM_Lead_Conversion_Mapping__mdt/listViews/DCRM_Lead_Conversion_Mapping.listView-meta.xml
<ListView>
    <fullName>DCRM_Lead_Conversion_Mapping</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Lead_Record_Types__c</columns>
    <columns>Mapping_Type__c</columns>
    <columns>Lead_Field__c</columns>
    <columns>Target_Object__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Target_Value__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>DCRM Lead Conversion Mapping</label>
    <language>en_US</language>
</ListView>